--- a/templates/admin/index_organism.html.twig
+++ b/templates/admin/index_organism.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/index.html.twig' %}
 
-{% block title %}Partenaires{% endblock %}
+{% block title %}Les Partenaires{% endblock %}
 
  {% block stylesheets %}
      {{ parent() }}
