--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -9,7 +9,11 @@
 
 {% block body %}
     <main class="home">
-        <h1><span class="orange-font">Bipbip</span> <span class="blue-font">rachète ton tél et en fait</span> <span class="orange-font">le 1er mobile</span> <span class="blue-font"><b>recyclé et connecté aux</b></span> <span class="orange-font">bons plans de ta région</span></h1>
+        <div class="text-img">
+            <img src="/images/perso-hipster.jpg" alt="Le personnage hispter">
+            <h1><span class="blue-font">Bipbip</span> <span class="blue-font">rachète ton tél et en fait</span> <span class="black-font">le 1er mobile</span> <span class="black-font"><b>recyclé et connecté</b></span> <span class="blue-font">aux bons plans de </span><span class="black-font">ta région</span></h1>
+        </div>
+
 
         {{ include('/home/slide.html.twig') }}
 
