--- a/templates/home/slide.html.twig
+++ b/templates/home/slide.html.twig
@@ -1,4 +1,4 @@
-<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+{#<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
             <a href="{{ path('new_estimation') }}" title="Vends ton tél, Cah et Rapide">
@@ -25,3 +25,4 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
+#}
