--- a/templates/user/showUser.html.twig
+++ b/templates/user/showUser.html.twig
@@ -21,7 +21,7 @@
             Prénom
         </div>
         <div class="col-5 text-left border-bottom p-2 pl-5">
-            {{ user.firstname }}
+            {{ user.firstname|capitalize }}
         </div>
     </div>
     <div class="row align-items-center">
