--- a/templates/admin/_form.html.twig
+++ b/templates/admin/_form.html.twig
@@ -1,11 +1,22 @@
+{% block title %}{% endblock %}
+
+ {% block stylesheets %}
+     {{ encore_entry_link_tags('admin-tables') }}
+ {% endblock %}
+
 <div class="container">
     <div class="row">
         <div class="col-10 mx-auto text-center form p-4">
             {{ form_start(form) }}
-            <h1 class="primary-title">Mettre à jour la matrice</h1>
-                {{ form_row(form.matrice_field, {'attr': {'class': 'form-control mb-3'}}) }}
-                {{ form_row(form.submit, {'label': 'Valider', 'class': 'btn btn-primary'}) }}
+            <h1 class="primary-title mb-5">Mettre à jour la matrice</h1>
+                {{ form_widget(form.matrice_field, {'attr': {'class': 'form-control mb-3', 'placeholder': 'Charger la matrice'}}) }}
+            <button class="secondary-button matrix_button">Valider</button>
             {{ form_end(form) }}
         </div>
     </div>
 </div>
+
+
+{% block javascripts %}
+    {{ encore_entry_script_tags('matrice_upload') }}
+{% endblock %}
