--- a/templates/admin/matrice.html.twig
+++ b/templates/admin/matrice.html.twig
@@ -1,14 +1,22 @@
 {% extends 'admin/index.html.twig' %}
+{% block title %}Matrice{% endblock %}
+
+ {% block stylesheets %}
+     {{ parent() }}
+     {{ encore_entry_link_tags('admin-tables') }}
+ {% endblock %}
+
 {% block body %}
+
     {% for message in app.flashes('success') %}
-        <div class="alert alert-success text-center">
-            {{ message }}
+        <div class="alert alert-success text-center" id="successMessage">
+            {{ message}}
         </div>
     {% endfor %}
     {{ include ('admin/_form.html.twig') }}
 
     {% if nbrPhoneBdd is defined %}
-        <div class="container">
+      {#  <div class="container">
             <div class="row text-center">
                 <h1>
                     Compte rendu de matrice
@@ -84,8 +92,64 @@
 
             </div>
         </div>
+        #}
+
+        <main id="organisms">
+            <h1 class="adminTitle primary-title">Compte rendu de la matrice</h1>
+
+            <table class="adminPartners">
+                <thead id="table-head">
+                <tr>
+                    <td>Nombre de téléphones avant modification </td>
+                    <td>Données CSV analysées</td>
+                    <td>Téléphones identiques </td>
+                    <td>Nombre de téléphones ajoutés </td>
+                    <td id="rowFour">Nombre de téléphones supprimés </td>
+
+                </tr>
+                </thead>
+
+                <tbody >
+                <tr >
+                    <td class="tableContain">{{ nbrPhoneBdd }}</td>
+                    <td class="tableContain">{{ analiseCsv }}</td>
+                    <td class="tableContain">{{ donneeIdentique }}</td>
+                    <td class="tableContain">{{ nbrTelNonTrouve }}</td>
+                    <td class="tableContain">{{ nbrPhoneSup }}</td>
+                </tr>
+
+                </tbody>
+            </table>
+
+
+
+
+
 
         {% if nbrTelNonTrouve != 0 %}
+
+
+            <table class="adminPartners">
+                <thead id="table-head">
+                <tr class="head-tr">
+                    <td>Liste d'ajouts en base de données </td>
+                    <td></td>
+                </tr>
+                </thead>
+
+                <tbody >
+                {% for phone in telNonTrouve %}
+                    <tr>
+                        <td class="tableContain">{{ phone.brand }} {{ phone.model }}</td>
+                        <td class="tableContain">{{ phone.capacity }} Go</td>
+                    </tr>
+
+                {% endfor %}
+                </tbody>
+            </table>
+
+
+            {#
                 <div class="container mt-5">
                     <div>
                         <h5 class="col-12 text-center">
@@ -108,10 +172,33 @@
                         {% endfor %}
                     </div>
                 </div>
+            #}
         {% endif %}
 
         {% if nbrPhoneSup != 0 %}
-            <div class="container mt-5">
+            <table class="adminPartners">
+                <thead id="table-head">
+                <tr>
+                    <td>Liste de suppression en base de données </td>
+                    <td></td>
+                </tr>
+                </thead>
+
+                <tbody >
+                {% for phone in phoneSup %}
+                    <tr>
+                        <td class="tableContain">{{ phone.brand }} {{ phone.model }}</td>
+                        <td class="tableContain">{{ phone.capacity }} Go</td>
+                    </tr>
+
+                {% endfor %}
+
+                </tbody>
+            </table>
+
+        </main>
+
+           {# <div class="container mt-5">
                 <div>
                     <h5 class="col-12 text-center">
                         Liste de suppression en Bdd
@@ -132,9 +219,14 @@
                                 </div>
                             </div>
                         </div>
-                    {% endfor %}
-                </div>
-            </div>
+                        #}
+
+              {#  </div>
+            </div>#}
         {% endif %}
     {% endif %}
 {% endblock %}
+{% block javascripts %}
+    {{ encore_entry_script_tags('flash_m') }}
+{% endblock %}
+
