--- a/templates/faq/index.html.twig
+++ b/templates/faq/index.html.twig
@@ -12,8 +12,11 @@
         <h1 class="primary-title"> Foire Aux Questions </h1>
 
         {% for category in categories %}
-            <article class="category">
+            <article class="category col-3 text-center ">
                 <a class="fourth-button" href="{{ path('faq_index', { 'id': category.id } )}}"> {{ category.name }}</a>
+                {% if category.id is not null%}
+                {{  faq.category.id }}
+                {% endif %}
             </article>
 
         {% endfor %}
