--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -119,11 +119,11 @@ header{
         display : none;
         z-index : 9999;
         background : #FFFFFF;
-        padding : 1em 2em;
+        padding : 1em 1em;
         width : 100%;
         height : 100%;
         position: fixed;
-        top: 50%;
+        top: 53%;
         left: 50%;
         transform: translate(-50%, -50%);
 
@@ -131,57 +131,116 @@ header{
             width : 30%;
             max-width : 30px;
             position : absolute;
-            top : 3%;
-            right : 3%;
+            top : 5%;
+            right : 6%;
             cursor : pointer;
         }
 
-        ul{
-            margin : 80px auto 30px auto;
+        .container-global {
+            display: flex;
+            flex-direction: initial;
+            box-shadow: 5px 0 10px rgb(135,151,151);
+            margin-bottom: 2%;
+            max-width : 1000px;
+            min-height : 360px;
+            max-height : 1000px;
 
-            .primary-title-menu{
-                max-width : 300px;
-                margin : 15px auto;
-                min-height : 35px;
-                max-height : 50px;
-                display : flex;
-                justify-content: left;
-                align-items : center;
+            .card-img-menu{
+                width : 50%;
+                background-color: grey;
 
-                a{
-                    color : $fourth-color;
-                    text-align: left;
+
+            }
+
+            .list-in-menu{
+                width: 50%;
+                margin-left: 1%;
+
+                ul{
+                    margin : 80px auto 30px auto;
+
+                    h3{
+                        text-align: left;
+                        color: $secondary-color;
+                        font-size : 1rem;
+                        margin-bottom: 0%;
+                        margin-top: 1%;
+                        min-width: 200px;
+                        max-width : 400px;
+                        min-height: 40px;
+                        max-height : 60px;
+
+                    }
+
+                    .primary-title-menu{
+                        height: 2%;
+                        width: 90%;
+                        max-width : 300px;
+                        min-height : 18px;
+                        max-height : 50px;
+        
+
+                            a{
+                                color : $fourth-color;
+                                text-align: left;
+                            }
+                    }
                 }
             }
+
+            .user-infos-menu{
+                margin: -0% 74% 3% 0%;
+
+                h3{
+                    color : $primary-color;
+                    font-size : 1.2rem;
+                }
+
+                a{
+                    display : block;
+                    width : 200px;
+                    margin : 10px auto 10px auto;
+                    font-size : 1rem;
+                }
+
+                .disconnection{
+                    color : darkred;
+                    margin : auto;
+                    font-style: italic;
+                    font-size: 0.9rem;
+                }
+
+                .connect{
+                    color : $primary-color;
+                    font-weight: 500;
+                }
+            }
+            .commu{
+
+                h3{
+                    .social-networks {
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+
+                        a {
+                            display: block;
+                            margin: 0 2%;
+
+                            img {
+                                width: 75%;
+                            }
+                        }
+                    }
+
+                }
+
+            }
         }
+    }
 
-        .user-infos-menu{
-            text-align: center;
 
-            h3{
-                color : $primary-color;
-                font-size : 1.2rem;
-            }
 
-            a{
-                display : block;
-                width : 200px;
-                margin : 10px auto 10px auto;
-                font-size : 1rem;
-            }
-
-            .disconnection{
-                color : darkred;
-                margin : auto;
-                font-style: italic;
-                font-size: 0.9rem;
-            }
-
-            .connect{
-                color : $primary-color;
-                font-weight: 500;
-            }
-        }
     }
 
     #menu.displayed{
@@ -246,7 +305,7 @@ header{
             }
         }
     }
-}
+
 
 /* FOOTER */
 footer {
@@ -301,10 +360,38 @@ footer {
             }
         }
     }
+    #menu .user-infos-menu{
+        margin: -10% 0% 4% 0%;
+    }
+
+    h3{
+        color : $primary-color;
+        font-size : 1.2rem;
+    }
+
+    a{
+        display : block;
+        width : 200px;
+        margin : 10px auto 10px auto;
+        font-size : 1rem;
+    }
+
+    .disconnection{
+        color : darkred;
+        margin : auto;
+        font-style: italic;
+        font-size: 0.9rem;
+    }
+
+    .connect{
+        color : $primary-color;
+        font-weight: 500;
+    }
+}
 
     footer{
         .social-networks{
             margin: 5% auto;
         }
     }
-}
+
