--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,7 +41,7 @@
                     {% endif %}
                 </div>
             </nav>
-            <a href="{{ path('home') }}" class="logo-bipbip"><img src="/images/logo-bipbip.png" alt="logo bipbip" /></a>
+            <a href="{{ path('home') }}" class="logo-bipbip"><img src="/images/new-logo-bipbip.png" alt="logo bipbip" /></a>
             {% for message in app.flashes('success') %}
                 <div class="alert alert-success text-center">
                     {{ message }}
