--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,7 @@
                 <div class="list-in-menu">
                     <img src="/images/close-button.png" alt="Fermer le menu" class="close-button"/>
                         <ul>
-                            <h3>BiBIP</h3>
+                            <h3>BIBIP</h3>
                                 <li class="primary-title-menu"><a href="{{ path("qui-sommes-nous") }}" title="Description Bip Bip">Qu'est-ce que c'est?</a></li>
                                 <li class="primary-title-menu"><a href="{{ path("qui-sommes-nous") }}" title="Description Bip Bip">Notre mission</a></li>
                             <h3>DEVIENS BIPBIP</h3>
@@ -59,18 +59,18 @@
                     </div>
 
                     <div class="commu">
-                        <h3 class="">Rejoins la commu</h3>
-                        <div class="social-networks">
-                            <a href="#" target="_blank" title="Page Facebook">
-                                <img src="{{ asset('images/logo-fb.png') }}" alt="Page Facebook" />
-                            </a>
-                            <a href="#" target="_blank" title="Instagram">
-                                <img src="{{ asset('images/logo-insta.png') }}" alt="Instagram" />
-                            </a>
-                            <a href="#" target="_blank" title="LinkedIn">
-                                <img src="{{ asset('images/logo-linkedin.png') }}" alt="LinkedIn" />
-                            </a>
-                        </div>
+                        <h3>Rejoins la commu</h3>
+                            <div class="social-networks">
+                                <a href="#" target="_blank" title="Page Facebook">
+                                    <img src="{{ asset('images/logo-fb.png') }}" alt="Page Facebook" />
+                                </a>
+                                <a href="#" target="_blank" title="Instagram">
+                                    <img src="{{ asset('images/logo-insta.png') }}" alt="Instagram" />
+                                </a>
+                                <a href="#" target="_blank" title="LinkedIn">
+                                    <img src="{{ asset('images/logo-linkedin.png') }}" alt="LinkedIn" />
+                                </a>
+                            </div>
                     </div>
                 </div>
                 </div>
